--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --aot"
+    "heroku-postbuild": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
@@ -54,6 +54,6 @@
   },
   "engines": {
     "node": "12.x",
-    "npm": "6.13.4"
+    "npm": "6.x"
   }
 }
