--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "^11.0.9",
+    "@angular/cli": "^12.0.3",
+    "typescript": "~4.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
