--- a/package.json
+++ b/package.json
@@ -3,42 +3,35 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
-    "start-dev": "ng serve",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --configuration production"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "~0.1100.2",
     "@angular/animations": "~11.0.1",
     "@angular/cdk": "^11.2.10",
-    "@angular/cli": "^12.0.3",
     "@angular/common": "~11.0.1",
     "@angular/compiler": "~11.0.1",
-    "@angular/compiler-cli": "^11.0.9",
     "@angular/core": "~11.0.1",
     "@angular/forms": "~11.0.1",
     "@angular/material": "^11.2.10",
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
-    "express": "^4.17.1",
     "localforage": "^1.9.0",
     "moment": "^2.29.1",
     "ngx-mask": "^12.0.0",
-    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^11.0.9",
-    "@angular/cli": "^12.0.3",
+    "@angular/compiler-cli": "~11.0.1",
+    "@angular/cli": "~11.0.2",
     "typescript": "~4.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
@@ -53,9 +46,5 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0"
-  },
-  "engines": {
-    "node": "12.14.0",
-    "npm": "6.12.0"
   }
 }
